# rgrep

./: Cargo.toml
src/: main.rs  printer.rs
src/format/: colored_formatter.rs  mod.rs
src/fs/: mod.rs  tokio_fs_reader.rs
src/pattern/: full_match.rs  mod.rs  regex_match.rs  wildcard_match.rs
