[package]
name = "rgrep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
tokio = { version = "1.17.0", features = ["full"] }
regex = "1.5.5"
globset = "0.4.8"
anyhow = "1.0.56"
async-trait = "0.1.52"
colored = "2.0.0"